# evalhq

./: actions.ts  agent.js  agent_server.py  client_test.py  del.py  dummy_agent.py  force_fix.py  fuzzer.js  next.config.ts  package-lock.json  package.json  pyproject.toml  red-team.js  test_agent.py
app/: demopage.tsx  layout.tsx  page.tsx
app/api/evaluate/: route.ts
app/api/sandbox/ecom/: route.ts
app/api/sandbox/salesforce/lead/: route.ts
app/api/simulate/: route.ts
app/api/test/: route.ts
app/api/world/: route.ts
app/docs/: page.tsx
app/v05/: page.tsx  scenarios.ts
evalshq.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
evalshq_package/: README.md  setup.py
evalshq_package/evalshq/: main.py
evalshq_package/evalshq/core/: base.py  engine.py
evalshq_package/evalshq/registry/: prompts.json
evalshq_package/evalshq_core.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
evalshq_v01.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
